--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   web:
-    image: oracatqaq/catsite:latest
+    image: 570768706/catsite:latest
     container_name: catsite
     ports:
       - "3000:3000"
