--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,5 @@ services:
       - ./data:/app/data
     restart: always
     environment:
-      NODE_ENV: production 
+      NODE_ENV: production
+    user: root 
