--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "3000:3000"
     volumes:
       - ./data:/app/data
+      - ./public/uploads:/app/public/uploads
     restart: always
     environment:
       NODE_ENV: production
