修复显示问题

--- a/data/config.json
+++ b/data/config.json
@@ -40,7 +40,7 @@
       "description": "这是一个示例站点",
       "url": "https://example.com",
       "icon": "🌟",
-      "preview": "",
+      "preview": "/uploads/1737107539530.png",
       "category": "public",
       "tags": [
         "示例",
